# g_challenges

./: .gitignore  Cargo.toml
crabbooru/: Cargo.toml  package-lock.json  package.json
crabbooru/client/: babel.config.cjs  jest.config.cjs  package.json
crabbooru/client/scripts/: image.sh
crabbooru/client/src/: App.svelte
crabbooru/client/src-tauri/: Cargo.toml  index.html  mod.rs  tauri-old.conf.json  tauri.conf.json
crabbooru/client/src-tauri/fuzz/: Cargo.toml
crabbooru/client/src-tauri/fuzz/fuzz_targets/: fuzz_target_1.rs
crabbooru/client/src-tauri/src/: api.rs  commands.rs  error.rs  main.rs  utils.rs
crabbooru/client/src-tauri/src/model/: danbooru.rs  favorite.rs  img_factory.rs  mod.rs  profile.rs  safebooru.rs  testbooru.rs
crabbooru/client/src-tauri/src/model/md5-db/: md5.rs  mod.rs
crabbooru/client/src-tauri/src/model/md5_db/: md5.rs  md5db.rs  mod.rs
crabbooru/client/src-tauri/src/model/search/: mod.rs  search_query.rs
crabbooru/client/src-tauri/src/viewer/: main_window.rs  mod.rs  sources_window.rs
crabbooru/client/src-tauri/src/viewer/tabs/: favorites_tab.rs  search_tab.rs
crabbooru/client/src/api/: image_api.svelte  image_api.ts  post_api.ts  search_api.ts
crabbooru/client/src/components/: tab.svelte
crabbooru/client/src/components/Image/: image.svelte  image.ts
crabbooru/client/src/components/Search/: SearchBar.ts  search-bar.svelte  search-tab.svelte  searchBar.svelte  searchBar.ts  search_api.ts
crabbooru/client/src/components/Table/: cell.svelte  image-grid.svelte  table.svelte
crabbooru/client/src/components/Tabs/: search-tab.svelte  searchTab.svelte
crabbooru/client/src/helpers/: types.ts
crabbooru/client/src/routes/: +page.js  +page.svelte  MainWindow.svelte  SourcesWindow.svelte  booru.js  profile.svelte
crabbooru/client/src/utils/: file.ts
crabbooru/client/tests/: test.rs
crabbooru/e2e/: Cargo.toml
crabbooru/model/firedbg/src/: img_factory.rs.firedbg.map  main.rs.firedbg.map
crabbooru/model/src/: main.rs
crabbooru/src/client/: Cargo.toml  package-lock.json  package.json
crabbooru/src/client/src/: api.rs  main.rs  mod.rs
crabbooru/src/client/src-tauri/: Cargo.toml  mod.rs  tauri.conf.json
crabbooru/src/client/src-tauri/src/: api.rs  main.rs
crabbooru/src/client/src-tauri/src/viewer/: main_window.rs  mod.rs  sources_window.rs
crabbooru/src/client/src/routes/: +page.svelte  sourcesWindow.svelte
crabbooru/src/client/src/viewer/: mod.rs  sources_window.rs
crabbooru/src/e2e/src/: main.rs
crabbooru/src/model/: Cargo.toml
crabbooru/src/model/src/: img_factory.rs  main.rs  profile.rs
verlet/: Cargo.toml  README.md
verlet/examples/: cloth_cutting.rs
verlet/src/: main.rs
verlet/src/components/: constraint.rs  locked.rs  mod.rs  point.rs
verlet/src/systems/: constraints.rs  mod.rs  points.rs
