workspace = { members = ["verlet", "crabbooru/client/src-tauri", "verlet_bevy", "boids_bevy"] }
[package]
name = "g_challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
comfy = "0.2.0"
sdl2 = "0.35.2"
serde_json = "1.0.111"
