[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
hyper = "1.0.1"
serde = { version = "1.0.193", features = ["serde_derive"] }
tokio = "1.34.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tracy = { version = "0.10.4", features = ["enable"] }
