[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
winit = "0.29.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-trait = "0.1.77"
reqwest = { version = "0.11.23", features = ["json"] }
url = "2.5.0"
image = "0.24.7"
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
chrono = "0.4.33"
once_cell = "1.19.0"
atomic_refcell = "0.1.13"
csv = "1.3.0"
tracing-test = "0.2.4"
redis = { version = "0.24.0", features = ["aio", "async-std", "async-trait", "tokio-comp", "async-std-comp", "r2d2"] }
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
rocket = "0.5.0"
redis-macros = "0.2.1"
fred = "8.0.4"
[package.metadata.packager]
before-packaging-command = "cargo build --release"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
