[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["serde_derive", "derive"] }
session_types = "0.3.1"
tokio = { version = "1.34.0", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
winit = "0.29.4"
