[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
hyper = "1.0.1"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["test-util", "tokio-macros", "full"] }
