[package]
name = "client-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# client = { git = "https://github.com/nuts-rice/g_challenges/tree/crabbooru/client.git", branch = "main" }
# [workspace]
# members = ["."]

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
